<resources>
    <string name="app_name">Meal Planner</string>
    <string name="nav_planner_title">Planner</string>
    <string name="nav_groceries_title">Groceries</string>
    <string name="nav_meals_title">Meals</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="short_monday">M</string>
    <string name="short_tuesday">Tu</string>
    <string name="short_wednesday">W</string>
    <string name="short_thursday">Th</string>
    <string name="short_friday">F</string>
    <string name="short_saturday">Sa</string>
    <string name="short_sunday">Su</string>
    <string name="planner_title">Weekly Meal Planner</string>
    <string name="add_button_title">Add a Meal</string>
    <string name="clear_button_title">Clear Meals</string>
    <string name="meal_title">Meals</string>
    <string name="previous_meals">Previous Meals</string>
    <string name="suggested_meals">Suggested Meals</string>
    <string name="grocery_add_button">Add an Item</string>
    <string name="grocery_clear_button">Clear List</string>
    <string name="grocery_buy_button">Buy Items</string>
    <string name="meals_clear_button">Clear Meals</string>
    <string name="grocery_item_header">Header</string>
    <string name="grocery_item_image_des">Image representing item type</string>
    <string name="meal_item_image_des">Image of the meal</string>
    <string name="meal_name">Meal Name </string>
    <string name="grocery_type_0">Produce</string>
    <string name="grocery_type_1">Canned </string>
    <string name="grocery_type_2">Meat</string>
    <string name="grocery_type_3">Dairy</string>
    <string name="grocery_type_4">Frozen</string>
    <string name="grocery_type_5">Other</string>
    <string name="item_name">Item Name</string>
    <string name="add_item_title">Add an Item</string>
    <string name="add_meal_title">Add a Meal</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>
</resources>
