<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/satButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_saturday" />

        <RadioButton
            android:id="@+id/thursButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_thursday" />

        <RadioButton
            android:id="@+id/wedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_wednesday" />

        <RadioButton
            android:id="@+id/monButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_monday" />

        <RadioButton
            android:id="@+id/sunButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_sunday" />

        <RadioButton
            android:id="@+id/tuesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_tuesday" />

        <RadioButton
            android:id="@+id/friButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_friday" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_name"
        android:inputType="text"/>

</LinearLayout>