<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_title"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/produceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_0" />


            <RadioButton
                android:id="@+id/cannedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_1" />

            <RadioButton
                android:id="@+id/meatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_2" />

            <RadioButton
                android:id="@+id/dairyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_3" />

            <RadioButton
                android:id="@+id/frozenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_4" />

            <RadioButton
                android:id="@+id/otherButton"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/grocery_type_5" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/amountRadioButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />


            <RadioButton
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <RadioButton
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

        </RadioGroup>
    </LinearLayout>

</LinearLayout>