<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_item_header"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/meal_title"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/type_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/checkbox_off_background"
            android:contentDescription="@string/grocery_item_image_des" />

    </LinearLayout>

</LinearLayout>